--- a/app/src/main/res/layout/variant_results_fragment_layout.xml
+++ b/app/src/main/res/layout/variant_results_fragment_layout.xml
@@ -12,8 +12,7 @@
         <LinearLayout android:id="@+id/llResultsTable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:orientation="horizontal" android:layout_width="match_parent"
